--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:georgejohnson255@gmail.com">email</a></li>
-			<li><a href="https://github.com/gj255">github.com/gj255</a></li>
+			<li><a href="https://github.com/gj255">github.com/mallinder</a></li>
 			</ul>
 		</footer>
 	</body>
